﻿S2Dao.NET 1.0.0-rc1
準備中
- [DAONET-6]トランザクションを指定しない場合でも、identityで自動生成された値をセットするようにする
- [DAONET-27].NET 2.0のnull許容型に対応する