@@ -198,6 +198,7 @@
     <Compile Include="Seasar.Dao.Impl\BeanArrayMetaDataDataReaderHandler.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Seasar.Dao.Impl\BeanGenericListMetaDataDataReaderHandler.cs" />
     <Compile Include="Seasar.Dao.Impl\BeanListMetaDataDataReaderHandler.cs">
       <SubType>Code</SubType>
     </Compile>
