@@ -2,3 +2,4 @@
 準備中
 - [DAONET-6]トランザクションを指定しない場合でも、identityで自動生成された値をセットするようにする
 - [DAONET-27].NET 2.0のnull許容型に対応する
+- [DAONET-28]Daoメソッドの戻り値の型に、Entity型を要素としたListジェネリッククラスを使用できるようにする
